# deep-research-agent

./: README.md  agents.py  email_agent.py  pyproject.toml  research_manager.py  run.py
deep_research/: README.md  email_agent.py  evaluator.py  requirements.txt  research_manager.py
