[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Agent AI for deep researching on the internet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.38.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sendgrid>=6.12.4",
    "openai>=1.97.1",
]
